RESOLVED FIXED205206
[macOS] Swipe gesture snapshot stays too long if provisional load has not started yet when endSwipeGesture() is called
https://bugs.webkit.org/show_bug.cgi?id=205206
Summary [macOS] Swipe gesture snapshot stays too long if provisional load has not sta...
Chris Dumez
Reported 2019-12-13 08:43:32 PST
Swipe gesture snapshot stays too long if provisional load has not started yet when endSwipeGesture() is called on macOS.
Attachments
Patch (5.12 KB, patch)
2019-12-13 08:58 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-12-13 08:58:22 PST
WebKit Commit Bot
Comment 2 2019-12-13 17:39:52 PST
Comment on attachment 385607 [details] Patch Clearing flags on attachment: 385607 Committed r253514: <https://trac.webkit.org/changeset/253514>
WebKit Commit Bot
Comment 3 2019-12-13 17:39:53 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-13 17:40:22 PST
Note You need to log in before you can comment on or make changes to this bug.